--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
     <main>
         <section>
             <div class="banner"> 
-                <div></div>
+                <div>
+                    <h2 class="bannerh2">Pretinum ac placerat dui interdum nunc in eros urna morbi</h2>
+                    <p class="bannerp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet officiis tempore cupiditate voluptatum! Aperiam quae voluptatem odit quidem tempora esse quasi, similique animi soluta neque assumenda adipisci distinctio illum...></p>
+                </div>
             </div>
         </section>
         <section class="generale">
