--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -33,11 +32,30 @@
                 </div>
             </div>
         </section>
+            <div class="titolo">
+                <h1 class="big"> Leadership</h1>
+                <h4>Ferternum urna a libero tempus</h4>
+            </div>
         <section class="generale">
-            <div class="sezione1"></div>
-            <div class="sezione2"></div>
+            <div class="sezione2">
+                <div class="img1">
+                    <div class="opaco"></div>
+                </div>
+                <div class="text">
+                    <h3>Lorem</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, explicabo rerum cupiditate quo adipisci eos iure ex molestiae sit impedit vero sunt nam commodi animi excepturi voluptatum ab dignissimos. Sequi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quos, eos officia eaque architecto illum quisquam, dicta molestiae vero optio fugiat? Tempora cupiditate numquam reprehenderit hic placeat ut, quisquam veniam.</p>
+                </div>
+            </div>
             <div class="sezione3"></div>
-            <div class="sezione4"></div>
+            <div class="sezione4">
+                <div class="img3">
+                    <div class="opaco"></div>
+                </div>
+                <div class="text">
+                    <h3>Lorem</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, explicabo rerum cupiditate quo adipisci eos iure ex molestiae sit impedit vero sunt nam commodi animi excepturi voluptatum ab dignissimos. Sequi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quos, eos officia eaque architecto illum quisquam, dicta molestiae vero optio fugiat? Tempora cupiditate numquam reprehenderit hic placeat ut, quisquam veniam.</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
