--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </nav>
     <main>
         <section>
-            <div class="banner"> 
+            <div class="banner">
+                <div class="opaco2"></div>
                 <div>
                     <h2 class="bannerh2">Pretinum ac placerat dui interdum nunc in eros urna morbi</h2>
                     <p class="bannerp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet officiis tempore cupiditate voluptatum! Aperiam quae voluptatem odit quidem tempora esse quasi, similique animi soluta neque assumenda adipisci distinctio illum...></p>
@@ -46,7 +47,15 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, explicabo rerum cupiditate quo adipisci eos iure ex molestiae sit impedit vero sunt nam commodi animi excepturi voluptatum ab dignissimos. Sequi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quos, eos officia eaque architecto illum quisquam, dicta molestiae vero optio fugiat? Tempora cupiditate numquam reprehenderit hic placeat ut, quisquam veniam.</p>
                 </div>
             </div>
-            <div class="sezione3"></div>
+            <div class="sezione3">
+                <div class="banner2">
+                    <div class="opaco"></div>
+                </div>
+                <div class="text">
+                    <h3>Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo quae illo iure et ad consequatur sapiente nihil quas, laudantium fugiat officiis molestias dignissimos! Pariatur deserunt impedit error suscipit, provident ducimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident ipsum aut quos quisquam sequi optio cum ipsa natus voluptate. Iure minus nam maiores? Laudantium, non? Ut alias officiis ipsam temporibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa optio totam ea quis tempore nihil, reprehenderit possimus quo est voluptatem voluptates mollitia blanditiis natus minima accusantium expedita eum commodi consequuntur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo perspiciatis ratione commodi architecto molestiae consequatur, quaerat dolores quae vel impedit praesentium aliquid inventore dicta. Eos incidunt consequatur accusamus inventore mollitia? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt illo delectus placeat, mollitia blanditiis perferendis, esse voluptatibus voluptas dolorem autem nemo quos pariatur totam. Amet reiciendis sit quo quibusdam? Eius? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, explicabo rerum cupiditate quo adipisci eos iure ex molestiae sit impedit vero sunt nam commodi animi excepturi voluptatum ab dignissimos. Sequi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quos, eos officia eaque architecto illum quisquam, dicta molestiae vero optio fugiat? Tempora cupiditate numquam reprehenderit hic placeat ut, quisquam veniam.</p>
+                </div>
+            </div>
             <div class="sezione4">
                 <div class="img3">
                     <div class="opaco"></div>
@@ -59,8 +68,9 @@
         </section>
     </main>
     <footer>
-        <div class="divisione3"></div>
+        <div class="footer">
+            <p>Desinged with</p>
+        </div>
     </footer>
-    
 </body>
 </html>
